Fixed first gap in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ figure {
   font-size: 26px;
   letter-spacing: 0.03em;
   color: var(--brand-color-black);
-  margin-right: 93px;
 }
 .logo-color {
   color: var(--selection-color);
